--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -17,8 +17,8 @@
   	margin: 35px;
   }
   button{
-    font-size: 1.45em;
-    background: #F10B;
+    font-size: 1em;
+    background: initial;
     border-radius: 50%;
   }
 }
